[package]
name = "tower_def"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8", features = ["dynamic"]}
# bevy = {version = "0.8"}
bevy-inspector-egui = "0.12.1"
bevy_embedded_assets = "0.4.0"
bevy_asset_loader = "0.12.1"
bevy_editor_pls = "0.1.1"
